--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,12 @@
             <artifactId>selenium-java</artifactId>
             <version>4.35.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.5.0</version>
+        </dependency>
     </dependencies>
-
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
